; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ctr_drbg.c_mbedtls_ctr_drbg_seed_entropy_len.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ctr_drbg.c_mbedtls_ctr_drbg_seed_entropy_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i8*, i8*, i64)*, i64, i32, i32, i8* }

@MBEDTLS_CTR_DRBG_KEYSIZE = common dso_local global i32 0, align 4
@MBEDTLS_CTR_DRBG_RESEED_INTERVAL = common dso_local global i32 0, align 4
@MBEDTLS_CTR_DRBG_KEYBITS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_ctr_drbg_seed_entropy_len(%struct.TYPE_4__* %0, i32 (i8*, i8*, i64)* %1, i8* %2, i8* %3, i64 %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i32 (i8*, i8*, i64)*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i64, align 8
  %17 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %8, align 8
  store i32 (i8*, i8*, i64)* %1, i32 (i8*, i8*, i64)** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i64 %4, i64* %12, align 8
  store i64 %5, i64* %13, align 8
  %18 = load i32, i32* @MBEDTLS_CTR_DRBG_KEYSIZE, align 4
  %19 = zext i32 %18 to i64
  %20 = call i8* @llvm.stacksave()
  store i8* %20, i8** %15, align 8
  %21 = alloca i8, i64 %19, align 16
  store i64 %19, i64* %16, align 8
  %22 = load i32, i32* @MBEDTLS_CTR_DRBG_KEYSIZE, align 4
  %23 = call i32 @memset(i8* %21, i32 0, i32 %22)
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 2
  %26 = call i32 @mbedtls_aes_init(i32* %25)
  %27 = load i32 (i8*, i8*, i64)*, i32 (i8*, i8*, i64)** %9, align 8
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  store i32 (i8*, i8*, i64)* %27, i32 (i8*, i8*, i64)** %29, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 4
  store i8* %30, i8** %32, align 8
  %33 = load i64, i64* %13, align 8
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  store i64 %33, i64* %35, align 8
  %36 = load i32, i32* @MBEDTLS_CTR_DRBG_RESEED_INTERVAL, align 4
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 3
  store i32 %36, i32* %38, align 4
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 2
  %41 = load i32, i32* @MBEDTLS_CTR_DRBG_KEYBITS, align 4
  %42 = call i32 @mbedtls_aes_setkey_enc(i32* %40, i8* %21, i32 %41)
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %44 = load i8*, i8** %11, align 8
  %45 = load i64, i64* %12, align 8
  %46 = call i32 @mbedtls_ctr_drbg_reseed(%struct.TYPE_4__* %43, i8* %44, i64 %45)
  store i32 %46, i32* %14, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %6
  %49 = load i32, i32* %14, align 4
  store i32 %49, i32* %7, align 4
  store i32 1, i32* %17, align 4
  br label %51

50:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  store i32 1, i32* %17, align 4
  br label %51

51:                                               ; preds = %50, %48
  %52 = load i8*, i8** %15, align 8
  call void @llvm.stackrestore(i8* %52)
  %53 = load i32, i32* %7, align 4
  ret i32 %53
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @mbedtls_aes_init(i32*) #2

declare dso_local i32 @mbedtls_aes_setkey_enc(i32*, i8*, i32) #2

declare dso_local i32 @mbedtls_ctr_drbg_reseed(%struct.TYPE_4__*, i8*, i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
